# cdc-text-corpora

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: component-diagram.md
src/cdc_text_corpora/: __init__.py
src/cdc_text_corpora/cli/: __init__.py  main.py
src/cdc_text_corpora/core/: __init__.py  datasets.py  downloader.py  parser.py
src/cdc_text_corpora/index/: __init__.py  article_indexer.py
src/cdc_text_corpora/processing/: __init__.py  direct_processor.py
src/cdc_text_corpora/qa/: __init__.py  article_processor.py  rag_agent.py  rag_engine.py  rag_pipeline.py  vector_store.py
src/cdc_text_corpora/utils/: __init__.py  config.py  index_manager.py  validation.py
tests/: __init__.py  test_batch_parser.py  test_eid_parser.py  test_mmwr_parser.py  test_parse_article.py  test_parser.py  test_pcd_parser.py
tests/articles/: download_manifest.json
tests/articles/eid/html/: eid_article_11_10_05-0508_article.htm  eid_article_18_5_11-1111_article.htm  eid_article_18_5_11-1275_article.htm  eid_article_21_8_14-0956_article.htm  eid_article_21_8_14-1251_article.htm  eid_article_21_8_15-0423_article.htm  eid_article_21_8_et-2108_article.htm
tests/articles/eid/output/: eid.json
tests/articles/mmwr/html/: mmwr_preview_mmwrhtml_mm5650a1.htm  mmwr_preview_mmwrhtml_mm5650a4.htm  mmwr_preview_mmwrhtml_mm6452a3.htm  mmwr_preview_mmwrhtml_rr5416a1.htm  mmwr_volumes_68_wr_mm6844e1.htm  mmwr_volumes_71_wr_mm7150a5.htm  mmwr_volumes_71_wr_mm7150a8.htm  mmwr_volumes_71_wr_mm715152a2.htm  mmwr_volumes_71_wr_mm7153a1.htm  mmwr_volumes_72_ss_ss7208a1.htm
tests/articles/mmwr/output/: mmwr.json
tests/articles/pcd/html/: pcd_issues_2008_06_0131.htm  pcd_issues_2011_10_0103.htm  pcd_issues_2014_14_0289.htm  pcd_issues_2015_15_0290.htm  pcd_issues_2019_19_0123.htm  pcd_issues_2021_20_0596.htm  pcd_issues_2021_20_0601.htm  pcd_issues_2021_20_0615.htm
tests/articles/pcd/output/: pcd.json
tests/ignore/: articles_test.md  download_test_articles.py  test_api_connection.py
