[project]
name = "cdc-text-corpora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mayer Antoine", email = "mayerantoine@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pandas>=2.2.3",
    "parsel>=1.10.0",
    "rich>=14.0.0",
    "sodapy>=2.2.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.scripts]
cdc-corpus= "cdc_text_corpora:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
