[project]
name = "cdc-text-corpora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mayer Antoine", email = "mayerantoine@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.27",
    "pandas>=2.2.3",
    "parsel>=1.10.0",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "sentence-transformers>=5.0.0",
    "sodapy>=2.2.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.scripts]
cdc-corpus= "cdc_text_corpora:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
