[project]
name = "cdc-text-corpora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mayer Antoine", email = "mayerantoine@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.27",
    "pandas>=2.2.3",
    "parsel>=1.10.0",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "sentence-transformers>=5.0.0",
    "sodapy>=2.2.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.scripts]
cdc-corpus= "cdc_text_corpora:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "mypy>=1.13.0",
    "flake8>=7.0.0",
    "flake8-pyproject>=1.2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestReturnNotNoneWarning"
]
norecursedirs = ["tests/ignore","tests/articles", "tests/articles/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = [
    "tests/articles/",
    "tests/ignore/",
    "build/",
    "dist/"
]

[tool.flake8]
max-line-length = 120
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long (handled by max-line-length)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "tests/articles/",
    "tests/ignore/",
    "*.egg-info"
]
per-file-ignores = [
    "tests/*:F401,F811"  # Allow unused imports and redefinition in tests
]
